--- a/LightLib.Web/Views/Catalog/Index.cshtml
+++ b/LightLib.Web/Views/Catalog/Index.cshtml
@@ -23,6 +23,9 @@
         <button class="btn btn-primary btn-sm">
             Add New Asset 
         </button>
+        <button class="btn btn-primary btn-sm">
+            View 
+        </button>
     </div>
 </div>
 
