--- a/LightLib.Web/Views/Patron/Index.cshtml
+++ b/LightLib.Web/Views/Patron/Index.cshtml
@@ -38,6 +38,9 @@
                 <th scope="col" style="width: 20%">First</th>
                 <th scope="col" style="width: 25%">Email</th>
                 <th scope="col" style="width: 5%">Fees</th>
+                <th scope="col" style="width: 5%">Delete</th>
+                <th scope="col" style="width: 5%">Edit</th>
+
             </tr>
             </thead>
             <tbody>
@@ -53,6 +56,17 @@
                         <td>@patron.FirstName</td>
                         <td>@patron.Email</td>
                         <td>$@Math.Round(patron.OverdueFees, 2)</td>
+                        <th scope="col" style="width: 5%">
+                            <button class="btn btn-primary btn-sm">
+                                Delete
+                            </button>
+                        </th>
+                        <th scope="col" style="width: 5%">
+                            <button class="btn btn-primary btn-sm">
+                                Edit
+                            </button>
+                        </th>
+
                     </tr>
                 </a>
             }
